option java_package = "my.adam.smo";
option java_outer_classname = "Example";
option java_generic_services = true;
option optimize_for = SPEED;

message Hello {
    required string messag = 1;
}

message AwsomeAnswer {
    required string answer = 1;
}

message In {
    required int32 operand1 = 1;
    required int32 operand2 = 2;
}

message Out {
    required int32 result = 1;
}

service AwsomeSearch {
    rpc Search (Hello) returns (AwsomeAnswer);
}

service NewUsefullService {
    rpc DoGoodJob (In) returns (Out);
}